@@ -1,82 +1,42 @@
+[error] Buffer: Exception while sending buffer event to org.gjt.sp.jedit.textarea.DisplayManager$BufferChangeHandler@3e7799 :
+[error] Buffer: java.lang.ArrayIndexOutOfBoundsException: Array index out of range: 206
+[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager.getPrevVisibleLine(DisplayManager.java:189)
+[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager.hideLineRange(DisplayManager.java:1064)
+[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager.expandFolds(DisplayManager.java:488)
+[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager$BufferChangeHandler.bufferLoaded(DisplayManager.java:1547)
+[error] Buffer:  at org.gjt.sp.jedit.Buffer.fireBufferLoaded(Buffer.java:4320)
+[error] Buffer:  at org.gjt.sp.jedit.Buffer.access$1100(Buffer.java:71)
+[error] Buffer:  at org.gjt.sp.jedit.Buffer$1.run(Buffer.java:309)
+
+
 TO DO
 
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-[error] ExtensionManager: java.lang.NullPointerException
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.getOffsets(StructureMatcher.java:181)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.paintHighlight(StructureMatcher.java:207)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.paintValidLine(StructureMatcher.java:147)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.TextAreaExtension.paintScreenLineRange(TextAreaExtension.java:70)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.ExtensionManager.paintScreenLineRange(ExtensionManager.java:146)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.ExtensionManager.paintScreenLineRange(ExtensionManager.java:106)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.TextAreaPainter.paintComponent(TextAreaPainter.java:699)
++ 4.3 drivers:
 
-- quick copy into vertical selection: keep the selection
-- select ebrowse/delelect
-
-- select all; shift left; if less lines, broken
-
-- save changes wrap margin; breakage, even after reload
-
-- blank space at end
-- word wrap at wrong place
-
-- tabs to spaces with rect select
-- C+a gave NPE
-- more flexible mirror list
+- independent text area component
+- better auto indent
+- save selection between buffer switch
+- more configurable file system browser
+- more accurate syntax highlighting
+- input methods
+- draganddrop patch
+- ditch aelfred
+- deferred loading API for macro handlers
+- resplit action, to restore last split configuration
+- vfs browser; don't move dir to top of history on reload
+- autosave directory option
 - S+INS, etc in swing controls
-
-- tall caret and tab
+- run last macro command
+- quick copy into vertical selection: keep a tall caret
 - vfs: a way of running awt requests not all at end
-- CA+PLUS +: bad
-- quicknotepad NPEs
-
-goToBuffer() and 0-height edit panes
-check tips of the day
-- document optional dependencies
-- help:
-  - titles in search are fucked
-- sidebars: need a border or some sort
-
-[error] WorkThread: java.lang.ClassCastException
-[error] WorkThread:  at archive.ArchiveVFS.getDirectories(Unknown Source)
-[error] WorkThread:  at archive.ArchiveVFS.cacheDirectories(Unknown Source)
-[error] WorkThread:  at archive.ArchiveVFS._listDirectory(Unknown Source)
-[error] WorkThread:  at org.gjt.sp.jedit.browser.BrowserIORequest.listDirectory(BrowserIORequest.java:159)
-[error] WorkThread:  at org.gjt.sp.jedit.browser.BrowserIORequest.run(BrowserIORequest.java:90)
-[error] WorkThread:  at org.gjt.sp.util.WorkThread.doRequest(WorkThread.java:194)
-[error] WorkThread:  at org.gjt.sp.util.WorkThread.doRequests(WorkThread.java:161)
-[error] WorkThread:  at org.gjt.sp.util.WorkThread.run(WorkThread.java:135)
-
-- drag and drop, not at caret position?
-- sidekick out of memory error!
-[error] ChunkCache: BUG: skew=1,out.size()=0
-[error] ChunkCache: BUG: skew=1,out.size()=1
-
-- SLASH -vs- / shortcut issue
 - wrapped dock buttons broken
-- VFS browser pathsEqual(): case sensitivity!
-- DnD still dosn't work as expected when draging from the same buffer,
-but differen text area (for example droping at the position where drag
-was started erases text)- no support for vertical pasting
-- anoying cursor blinking (responsible for this is scrolling option :
-textArea.moveCaretPosition(pos,JEditTextArea.ELECTRIC_SCROLL) in
-dragOver() method)
-- C+d & killring
-- jEdit.checkBufferStatus() fucks with split panes
-- complete word not wide enough
-- test keyboard completion with expanded/collapsed tree
-- test keyboard completion with high latency VFS
-- option to disable context menu
-- plugin mgr inspection of not-loaded plugins
-- history text field tweak
-- tall caret and tab
-- printing: check default printer setting
-- fsb default size
 
 + docs:
 
+- document optional dependencies
 - deferred loading mention.
 - addCommandPath()
 - API thread safety
@@ -118,6 +78,59 @@ dragOver() method)
   - status bar messages & readNextChar()
 - vfs javadoc: invokeAndWait() example for createVFSSession()
 
+[error] ExtensionManager: java.lang.NullPointerException
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.getOffsets(StructureMatcher.java:181)
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.paintHighlight(StructureMatcher.java:207)
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.paintValidLine(StructureMatcher.java:147)
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.TextAreaExtension.paintScreenLineRange(TextAreaExtension.java:70)
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.ExtensionManager.paintScreenLineRange(ExtensionManager.java:146)
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.ExtensionManager.paintScreenLineRange(ExtensionManager.java:106)
+[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.TextAreaPainter.paintComponent(TextAreaPainter.java:699)
+
+- tabs to spaces with rect select
+- more flexible mirror list
+
+- CA+PLUS +: bad
+
+check tips of the day
+- help:
+  - titles in search are fucked
+- sidebars: need a border or some sort
+
+[error] WorkThread: java.lang.ClassCastException
+[error] WorkThread:  at archive.ArchiveVFS.getDirectories(Unknown Source)
+[error] WorkThread:  at archive.ArchiveVFS.cacheDirectories(Unknown Source)
+[error] WorkThread:  at archive.ArchiveVFS._listDirectory(Unknown Source)
+[error] WorkThread:  at org.gjt.sp.jedit.browser.BrowserIORequest.listDirectory(BrowserIORequest.java:159)
+[error] WorkThread:  at org.gjt.sp.jedit.browser.BrowserIORequest.run(BrowserIORequest.java:90)
+[error] WorkThread:  at org.gjt.sp.util.WorkThread.doRequest(WorkThread.java:194)
+[error] WorkThread:  at org.gjt.sp.util.WorkThread.doRequests(WorkThread.java:161)
+[error] WorkThread:  at org.gjt.sp.util.WorkThread.run(WorkThread.java:135)
+
+- drag and drop, not at caret position?
+- sidekick out of memory error!
+[error] ChunkCache: BUG: skew=1,out.size()=0
+[error] ChunkCache: BUG: skew=1,out.size()=1
+
+- SLASH -vs- / shortcut issue
+- VFS browser pathsEqual(): case sensitivity!
+- DnD still dosn't work as expected when draging from the same buffer,
+but differen text area (for example droping at the position where drag
+was started erases text)- no support for vertical pasting
+- anoying cursor blinking (responsible for this is scrolling option :
+textArea.moveCaretPosition(pos,JEditTextArea.ELECTRIC_SCROLL) in
+dragOver() method)
+- C+d & killring
+- jEdit.checkBufferStatus() fucks with split panes
+- complete word not wide enough
+- test keyboard completion with expanded/collapsed tree
+- test keyboard completion with high latency VFS
+- option to disable context menu
+- plugin mgr inspection of not-loaded plugins
+- history text field tweak
+- printing: check default printer setting
+- fsb default size
+
 + obscure:
 
 - bsh bugs:
@@ -133,7 +146,6 @@ dragOver() method)
 - auto indent: don't de-indent on enter if no leading indent at all?
 - remove-marker, select-next/prev-marker/bracket
 - gzip & unicode, or gzip & <?xml encoding...
-- new macro handler api
 - invoking action bar command twice
 - backup time distance setting
 - if A depends on B but A is loaded before B and B breaks, A ends up
@@ -141,7 +153,6 @@ dragOver() method)
 - expand fold: try to expand even if already expanded
 - format -- instead of \n\n, what if it has \n   \n?
 - C+ENTER 3 C+2
-- tall caret and tab
 - don't show 'new directory' in favorites:
 - auto indent:
   if(foo)
